--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "~13.3.2",
     "@angular/router": "~13.3.2",
     "@angular/service-worker": "~13.3.2",
+    "lottie-web": "^5.9.3",
+    "ngx-lottie": "^8.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
