--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lottie-web": "^5.9.3",
     "ngx-lottie": "^8.2.0",
     "rxjs": "~6.6.0",
+    "swiper": "^8.4.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
