--- a/angular.json
+++ b/angular.json
@@ -82,10 +82,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "iportfolio:build:production"
+              "buildTarget": "iportfolio:build:production"
             },
             "development": {
-              "browserTarget": "iportfolio:build:development"
+              "buildTarget": "iportfolio:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -93,7 +93,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "iportfolio:build"
+            "buildTarget": "iportfolio:build"
           }
         },
         "test": {
