--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/service-worker": "^18.1.0",
+    "boxicons": "^2.1.4",
     "rxjs": "~6.6.0",
     "swiper": "^8.4.5",
     "tslib": "^2.3.0",
