--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/boxicons/css/boxicons.min.css"
             ],
             "scripts": [],
             "serviceWorker": true,
