--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,7 @@
               "base": "dist/iportfolio"
             },
             "index": "src/index.html",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": [],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
